playing with css

--- a/old-site/index.html
+++ b/old-site/index.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    
+    <section>
+      <div class="hero-image">bg.jpg</div>
+        <h1>Your first billion for only a buck.</h1>
+          <p>The new hottest currency club. Introducing<span> Dollar Dollar Club.</span></p>
+    </section>
+
+    <section>
+      <h2>What is the Dollar Dollar Club?</h2>
+        <p>Hover below to see just how<span> DDC</span> works.</p>
+
+          <h3>Send Money
+            <div class="send">
+              <h4>First things first. Drop off any your $1 at any DDC location. You can even give us a call and we'll come pick up your money.</h4>
+          </h3>
+
+          <h3>Receive
+            <div class="receive">
+              <h4>Next we scour our collection of thousands of currencies and pick a bill just for you.</h4>
+          </h3>
+            
+          <h3>Repeat</h3>
+            <div class="repeat">
+              <h4>Try us once and you'll be hooked on your new crisp, minty bills. With our frequent collector program, every 10 months, you get one free!</h4>
+    </section>
+
+    <section>
+      <div class="footer">
+        <p>Copywrite Dollar Dollar Club</p>
+      </div>
+    </section>
+
   </body>
 </html>
