--- a/old-site/index.html
+++ b/old-site/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A cool startup site">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
-  </head>
+  </head><link href='http://fonts.googleapis.com/css?family=Noto+Sans:700|Raleway:700,400' rel='stylesheet' type='text/css'>
   <body>
     <section>
       <div class="hero-image">bg.jpg</div>
