cleaned up semantics

--- a/old-site/index.html
+++ b/old-site/index.html
@@ -34,7 +34,7 @@
               <h4>Try us once and you'll be hooked on your new crisp, minty bills. With our frequent collector program, every 10 months, you get one free!</h4>
        
       <div class="footer">
-        <div class"white-text-footer">Copywrite Dollar Dollar Club</div>
+        <div class="white-text-footer">Copywrite Dollar Dollar Club</div>
       </div>
   
 
