--- a/old-site/index.html
+++ b/old-site/index.html
@@ -14,13 +14,13 @@
         <h1>Your first billion for only a buck.</h1>
           <div class="white-text-header">The new hottest currency club. Introducing<span> Dollar Dollar Club.</span>
           </div>
-             
-                 <i class="fa fa-money"></i>
-                 <i class="fa fa-tint"></i>
-                 <i class="fa fa-heart"></i>
               
       <h2>What is the Dollar Dollar Club?</h2>
         <p>Hover below to see just how<span> DDC</span> works.</p>
+
+          <i class="fa fa-money fa-3x"></i>
+          <i class="fa fa-tint fa-3x"></i>
+          <i class="fa fa-heart fa-3x"></i>
 
 
           <h3>SEND MONEY
