--- a/old-site/index.html
+++ b/old-site/index.html
@@ -10,7 +10,7 @@
   </head><link href='http://fonts.googleapis.com/css?family=Noto+Sans:700|Raleway:700,400' rel='stylesheet' type='text/css'><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <body>
    <section class="top half">
-      <div class="hero-image">bg.jpg></div>
+      <img src="bg.jpg" alt="money">
         <h1>Your first billion for only a buck.</h1>
           <div class="white-text-header">The new hottest currency club. Introducing<span> Dollar Dollar Club.</span>
           </div>
