last commit html

--- a/old-site/index.html
+++ b/old-site/index.html
@@ -45,17 +45,17 @@
 </section>
 
 
-<!-- <section class="bottom-line">
+<section class="bottom-line">
  <div class="boxes">
 
- </div>   
+ </div>   s
 
  <div class="boxes">
 </div>
 
 <div class="boxes">
 </div>
-</section> -->
+</section>
 
 <div class="footer">
   <div class="white-text-footer">Copywrite Dollar Dollar Club</div>
