last pairing session

--- a/old-site/index.html
+++ b/old-site/index.html
@@ -8,48 +8,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
 </head><link href='http://fonts.googleapis.com/css?family=Noto+Sans:700|Raleway:700,400' rel='stylesheet' type='text/css'><link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<body>
- <section class="top-half">
-  <h1>Your first billion for only a buck.</h1>
-  <div class="white-text-header">The new hottest currency club. Introducing<span> Dollar Dollar Club.</span>
-  </div>
-</section>
-
-<h2>What is the Dollar Dollar Club?</h2>
-<p>Hover below to see just how<span> DDC</span> works.</p>
-
-<section class="middle">
-  <div class="circle-wrap">
-   <div class="box">
-      <i class="fa fa-money fa-4x fa-fw"></i>
-      <h3>SEND MONEY</h3>
-    </div>
-    <h4>First things first. Drop off any your $1 at any DDC location. You can even give us a call and we'll come pick up your money.</h4>
-  </div>
-
-<div class="circle-wrap">
-<div class="box">
-  <i class="fa fa-tint fa-4x fa-fw"></i>
-  <h3>RECEIVE</h3>
-</div>
-  <h4>Next we scour our collection of thousands of currencies and pick a bill just for you.</h4>
-</div>
-
-<div class="circle-wrap">
-<div class="box">
-  <i class="fa fa-heart fa-4x fa-fw"></i>
-  <h3>REPEAT</h3>
-</div>
-  <h4>Try us once and you'll be hooked on your new crisp, minty bills. With our frequent collector program, every 10 months, you get one free!</h4>
-</div>
-</section>
+  <body>
+    <section class="top-half">
+      <h1 class="vert-center intro-title">Your first billion for only a buck.</h1>
+      <div class="white-text-header vert-center">The new hottest currency club. Introducing<span> Dollar Dollar Club.</span>
+      </div>
+    </section>
 
 
-<div class="footer">
-  <div class="white-text-footer">Copywrite Dollar Dollar Club</div>
-</div>
+    <section class="second-half">
+      <div class="intro">
+        <h2>What is the Dollar Dollar Club?</h2>
+        <p class="hover-text">Hover below to see just how<span> DDC</span> works.</p>
+      </div>
+      <section class="middle">
+          <div class="circle-wrap">
+           <div class="box">
+            <i class="fa fa-money fa-4x fa-fw"></i>
+            <h3>SEND MONEY</h3>
+           </div>
+          <h4 class="circle-text">First things first. Drop off any your $1 at any DDC location. You can even give us a call and we'll come pick up your money.</h4>
+        </div>
 
+        <div class="circle-wrap">
+          <div class="box">
+            <i class="fa fa-tint fa-4x fa-fw"></i>
+            <h3>RECEIVE</h3>
+          </div>
+          <h4 class="circle-text">Next we scour our collection of thousands of currencies and pick a bill just for you.</h4>
+        </div>
 
+        <div class="circle-wrap">
+          <div class="box">
+            <i class="fa fa-heart fa-4x fa-fw"></i>
+            <h3>REPEAT</h3>
+          </div>
+          <h4 class="circle-text">Try us once and you'll be hooked on your new crisp, minty bills. With our frequent collector program, every 10 months, you get one free!</h4>
+        </div>
+      </section>
 
-</body>
+      <div class="footer">
+        <div class="white-text-footer">Copywrite Dollar Dollar Club</div>
+      </div>
+    </section>
+  </body>
 </html>
